[package]
name = "task_log"
version = "0.1.5"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
description = "Task based logging"
documentation = "https://docs.rs/task_log"
repository = "https://github.com/gleich/task_log"

[dependencies]
colorful = "0.2.1"
chrono = "0.4.23"
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1.0.66"
